--- a/css/agency.css.scss
+++ b/css/agency.css.scss
@@ -56,28 +56,28 @@ h6 {
     font-weight: 700;
 }
 
-.img-centered {
+/*.img-centered {
     margin: 0 auto;
 }
-
+*/
 .bg-light-gray {
     background-color: #f7f7f7;
 }
 
-.bg-darkest-gray {
+/*.bg-darkest-gray {
     background-color: #222;
-}
+}*/
 
-.btn-primary {
+/*.btn-primary {
     border-color: #8DE8B9;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
     background-color: #8DE8B9;
-}
+}*/
 
-.btn-primary:hover,
+/*.btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary.active,
@@ -115,8 +115,10 @@ fieldset[disabled] .btn-primary.active {
 .btn-primary .badge {
     color: #8DE8B9;
     background-color: #fff;
-}
+}*/
 
+
+/* BUTTONS */
 .btn-xl {
     padding: 20px 40px;
     border-color: #8DE8B9;
@@ -168,6 +170,8 @@ fieldset[disabled] .btn-xl.active {
     color: #8DE8B9;
     background-color: #fff;
 }
+
+
 
 .page-scroll {
     color: #2C7DE8;
@@ -266,12 +270,6 @@ fieldset[disabled] .btn-xl.active {
 }
 
 
-/*.portfo-img {
-    width: 100%;
-    height: 100%;
-}
-
-*/
 
 header {
     text-align: center;
@@ -371,19 +369,19 @@ section h3.section-subheading {
     text-transform: none;
 }
 
-#portfolio .portfolio-item {
+.portfolio-item {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+.portfolio-item .portfolio-link {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+.portfolio-item .portfolio-link .portfolio-hover {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -394,11 +392,11 @@ section h3.section-subheading {
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+.portfolio-item .portfolio-link .portfolio-hover:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+.portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -409,16 +407,16 @@ section h3.section-subheading {
     color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
+.portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
+.portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
+.portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
     margin: 0;
 }
 
-#portfolio .portfolio-item .portfolio-caption {
+.portfolio-item .portfolio-caption {
     margin: 0 auto;
     padding: 25px;
     max-width: 400px;
@@ -426,29 +424,29 @@ section h3.section-subheading {
     background-color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-caption h4 {
+.portfolio-item .portfolio-caption h4 {
     margin: 0;
     text-transform: none;
 }
 
-#portfolio .portfolio-item .portfolio-caption p {
+.portfolio-item .portfolio-caption p {
     margin: 0;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
     font-style: italic;
 }
 
-#portfolio * {
+* {
     z-index: 2;
 }
 
 @media(min-width:767px) {
-    #portfolio .portfolio-item {
+    .portfolio-item {
         margin: 0 0 30px;
     }
 }
 
-.timeline {
+/*.timeline {
     position: relative;
     padding: 0;
     list-style: none;
@@ -646,7 +644,7 @@ section h3.section-subheading {
     .timeline>li.timeline-inverted>.timeline-panel {
         padding: 0 100px 20px 20px;
     }
-}
+}*/
 
 #aboutme {
     background-image: url(../img/team/webbackblur.jpg);
@@ -674,10 +672,12 @@ section h3.section-subheading {
     margin-top: 0;
 }
 
-aside.clients img {
+/*aside.clients img {
     margin: 50px auto;
 }
+*/
 
+/* CONTACT  */
 section#contact {
     background-color: #222;
     background-image: url(../img/map-image2.png);
@@ -743,6 +743,9 @@ section#contact .text-danger {
     color: #e74c3c;
 }
 
+
+/* FOOTER */
+
 footer {
     padding: 25px 0;
     text-align: center;
@@ -788,18 +791,13 @@ ul.social-buttons li a:active {
     background-color: #8DE8B9;
 }
 
-.btn:focus,
+/*.btn:focus,
 .btn:active,
 .btn.active,
 .btn:active:focus {
     outline: 0;
 }
-
-.icons img{
-    width: 100px;
-    height: 100px;
-
-}
+*/
 
 
 ::-moz-selection {
