--- a/css/agency.css
+++ b/css/agency.css
@@ -4,7 +4,7 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-body {
+/*body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
@@ -528,4 +528,4 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #8DE8B9;
-}
+}*/
