--- a/css/agency.css.scss
+++ b/css/agency.css.scss
@@ -186,7 +186,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/portbg.png);
+    background-image: url(../img/portbg.svg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
