--- a/css/agency.css
+++ b/css/agency.css
@@ -67,7 +67,7 @@ BUTTONS
     border-color: #8DE8B9;
     border-radius: 3px;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Permanent Marker', cursive;
     font-size: 18px;
     font-weight: 700;
     color: #fff;
