--- a/css/agency.css
+++ b/css/agency.css
@@ -277,7 +277,6 @@ section h3.section-subheading {
 }
 
 /* SKILLS */
-
 .service-heading {
     margin: 15px 0;
     text-transform: none;
@@ -303,7 +302,7 @@ section h3.section-subheading {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(254,209,54,.9);
+    background: #e8e8e8;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -393,7 +392,11 @@ section h3.section-subheading {
 /* CODEPEN */
 #codepen {
     border: solid red;
-    background-color: ;
+}
+
+.col-md-12 {
+    border: solid red;
+    height: 350px;
 }
 
 /* CONTACT  */
