--- a/css/agency.css
+++ b/css/agency.css
@@ -390,9 +390,9 @@ section h3.section-subheading {
 }
 
 /* CODEPEN */
-.col-md-12 {
-    border: solid #3d3d3e;
-    padding: 1em;
+#codepen {
+    background-color: #f1f1f1 !important;
+
 }
 
 /* CONTACT  */
