--- a/css/agency.css
+++ b/css/agency.css
@@ -402,6 +402,11 @@ section#contact {
 
 section#contact .section-heading {
     color: black;
+    -webkit-transition: all .5s ;
+       -moz-transition: all .5s ;
+        -ms-transition: all .5s ;
+         -o-transition: all .5s ;
+            transition: all .5s ;
 }
 
 section#contact .section-heading:hover {
