--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1390,6 +1390,7 @@ pre code {
   overflow-y: scroll;
 }
 .container {
+/*  height: 650px;*/
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -1411,12 +1412,14 @@ pre code {
   }
 }
 .container-fluid {
+/*  height: 650px;*/
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
 .row {
+/*  height: 650px;*/
   margin-right: -15px;
   margin-left: -15px;
 }
