--- a/Clean2/assets/css/style.css
+++ b/Clean2/assets/css/style.css
@@ -986,10 +986,10 @@ body {
   display: inline-block;
   padding: 10px 18px;
   margin-bottom: 10px;
-  background: #EEE;
+  background: #E0E0E0;
   border: none;
   border-radius: 7px;
-  background-image: linear-gradient( to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );
+  /*background-image: linear-gradient( to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );*/
   color: #222;
   font-family: sans-serif;
   font-size: 16px;
@@ -1037,9 +1037,9 @@ body {
 
 /* ---- isotope ---- */
 
-.grid {
+/*.grid {
   border: 1px solid #333;
-}
+}*/
 
 /* clear fix */
 .grid:after {
@@ -1053,11 +1053,11 @@ body {
 .element-item {
   position: relative;
   float: left;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   margin: 5px;
   padding: 10px;
-  background: #888;
+/*  background: #888;*/
   color: #262524;
 }
 
