--- a/Clean2/assets/css/style.css
+++ b/Clean2/assets/css/style.css
@@ -1059,7 +1059,13 @@ body {
   padding: 10px;
 /*  background: #888;*/
   color: #262524;
+  transition: all .2s ease-in-out; 
 }
+
+.element-item:hover {
+  transform: scale(1.1);
+}
+
 
 .element-item > * {
   margin: 0;
