--- a/Clean2/assets/css/style.css
+++ b/Clean2/assets/css/style.css
@@ -491,17 +491,17 @@ textarea.form-control {
 }
 
 .social-links a {
-	width: 36px;
-	height: 36px;
-	display: block;
-	line-height: 35px;
-	text-align: center;
-	border: 1px solid rgba(255, 255, 255, .1);
-	-webkit-border-radius: 3px;
-	   -moz-border-radius: 3px;
-			border-radius: 3px;
-	font-size: 14px;
-	color: rgba(255, 255, 255, .2);
+    width: 80px;
+    height: 80px;
+    display: block;
+    line-height: 80px;
+    text-align: center;
+    border: 1px solid rgba(255, 255, 255, .1);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    font-size: 30px;
+    color: #FFFFFF;
 }
 
 .social-links a:hover {
