--- a/Clean2/assets/css/style.css
+++ b/Clean2/assets/css/style.css
@@ -993,19 +993,19 @@ body {
   color: #222;
   font-family: sans-serif;
   font-size: 16px;
-  text-shadow: 0 1px white;
+/*  text-shadow: 0 1px white;*/
   cursor: pointer;
 }
 
 .button:hover {
-  background-color: #8CF;
+  background-color: #828385;
   text-shadow: 0 1px hsla(0, 0%, 100%, 0.5);
   color: #222;
 }
 
 .button:active,
 .button.is-checked {
-  background-color: #28F;
+  background-color: #3B3D42;
 }
 
 .button.is-checked {
@@ -1032,8 +1032,8 @@ body {
   margin-right: 1px;
 }
 
-.button-group .button:first-child { border-radius: 0.5em 0 0 0.5em; }
-.button-group .button:last-child { border-radius: 0 0.5em 0.5em 0; }
+/*.button-group .button:first-child { border-radius: 0.5em 0 0 0.5em; }
+.button-group .button:last-child { border-radius: 0 0.5em 0.5em 0; }*/
 
 /* ---- isotope ---- */
 
