--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,7 +346,7 @@ textarea.form-control {
 /* ---------------------------------------------- */
 
 #home {
-	background: url(../images/main_bg.jpg);
+	background: url(../images/main_bg_web.jpg);
 	background-color: #222;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
