--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,500,700,800);
 @import url(http://fonts.googleapis.com/css?family=Lobster);
-
+@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,100,300);
+@import url(https://fonts.googleapis.com/css?family=Abel);
 /*!
  * My Portfolio v1.0.0
  * Homepage: http://scripteden.com
@@ -9,7 +11,7 @@
 */
 
 body {
-	font: 300 14px/1.8 'Raleway', sans-serif;
+	font: 300 14px/1.8 'Lato', sans-serif;
 	color: #666;
 	overflow-x: hidden;
 }
@@ -20,18 +22,42 @@ img {
 }
 
 a {
-	color: #E7746F;
+	color: #5fb4ec;
 }
 
 a:hover {
 	text-decoration: none;
 	color: #999;
 }
-
+.fa {
+	color: #4a4a4a;
+}
 /* ---------------------------------------------- /*
  * Transition elsements
 /* ---------------------------------------------- */
-
+.mock-ups {
+	padding-top: 100px;
+}
+.do-sun {
+    background-repeat: no-repeat;
+    background: url('../images/do_sun_icon.png');
+    background-size: cover;
+}
+.aidsinfo {
+	    background-repeat: no-repeat;
+    background: url('../images/aidsinfo.png');
+    background-size: cover;
+}
+.vitrocsa {
+	    background-repeat: no-repeat;
+    background: url('../images/virotcsa.png');
+    background-size: cover;
+}
+.cafe-twelve {
+		    background-repeat: no-repeat;
+    background: url('../images/cafe_twelve.png');
+    background-size: cover;
+}
 .break, .break2 {
 	display: none;
 }
@@ -72,7 +98,7 @@ a,
 /* ---------------------------------------------- */
 
 h1, h2, h3, h4, h5, h6 {
-	font: 700 40px/1.2 Raleway, sans-serif;
+	font: 700 40px/1.2 Abel, sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	margin: 5px 0 5px;
@@ -231,13 +257,17 @@ textarea.form-control {
 /* ---------------------------------------------- /*
  * General Styles
 /* ---------------------------------------------- */
-
+.main-name {
+	border: 2px solid ;
+	padding: 30px 30px 0px 30px;
+    border: 2px solid;
+}
 .pfblock {
 	padding: 50px 0 0px;
 }
 
 .pfblock-gray {
-	background: #f5f5f5;
+	background: #ffffff;
 }
 
 .pfblock-image {
@@ -262,9 +292,12 @@ textarea.form-control {
 
 .pfblock-header {
 	text-align: center;
-	margin: 0 0 60px;
+	margin: 0 0 30px;
+	height: 100px;
 }
-
+.sub-text {
+	height: 140px;
+}
 .pfblock-header-left {
 	text-align: left;
 }
@@ -277,11 +310,21 @@ textarea.form-control {
 .pfblock-title{
     font-weight: 800;
 }
+.my-name {
+	width: 16%;
+	font-size: 80px;
+	float: left;
+}
+.my-name-last {
+	width: 16%;
+	font-size: 80px;
+	float: none;
+}
 
 .pfblock-subtitle {
-	font-family: Raleway, "Times New Roman", Times, sans-serif;
-	font-style: normal;
-	font-size: 18px;
+	font-family: Lato, "Times New Roman", Times, sans-serif;
+	font-weight: 100;
+	font-size: 16px;
 }
 
 .pfblock-line {
@@ -346,18 +389,30 @@ textarea.form-control {
 /* ---------------------------------------------- */
 
 #home {
-	background: url(../images/main_bg_web.jpg);
+/*	background: url(../images/bg_a_2016.png);
 	background-color: #222;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
-	-webkit-background-size: cover;
-	   -moz-background-size: cover;
-		 -o-background-size: cover;
-			background-size: cover;
-	padding: 0;
+	-webkit-background-size: contain;
+	   -moz-background-size: contain;
+		 -o-background-size: contain;
+			background-size: contain;
+	padding: 0;*/
 }
-
+.big_a {
+	margin: 0 auto;
+	display: block;
+	text-align: center;
+}
+#gradient
+{
+  width: 100%;
+  height: 69%;
+  padding: 0px;
+  margin: 0px;
+  z-index:10;
+}
 
 
 #dwellwell {
@@ -441,9 +496,9 @@ textarea.form-control {
 /* ---------------------------------------------- */
 
 .iconbox {
-	background: #fff;
+/*	background: #fff;*/
 	border-bottom: 1px solid #d4d4d4;
-	text-align: center;
+	text-align: left;
 	padding: 40px 20px;
 	margin: 0 0 20px;
 }
@@ -513,7 +568,7 @@ textarea.form-control {
 /* ---------------------------------------------- */
 
 #footer {
-	background: #222;
+	background: #ffffff;
 	text-align: center;
 	padding: 40px 0;
 	color: #FFF;
@@ -521,6 +576,9 @@ textarea.form-control {
 
 .copyright {
 	margin: 0;
+	font-family: lato;
+	font-size: 12px;
+	color: #4a4a4a;
 }
 
 .copyright a{
@@ -568,7 +626,7 @@ textarea.form-control {
 /* ---------------------------------------------- */
 
 .header {
-	border-bottom: 1px solid #f5f5f5;
+/*	border-bottom: 1px solid #f5f5f5;*/
 	position: relative;
 	width: 100%;
 	z-index: 998;
@@ -579,7 +637,7 @@ textarea.form-control {
 	border-radius: 0;
 	margin: 0;
 	text-transform: uppercase;
-	font-family: Raleway, sans-serif;
+	font-family: Playfair Display, sans-serif;
 }
 
 .navbar-custom,
@@ -602,13 +660,13 @@ textarea.form-control {
 .navbar-custom .navbar-nav > li.active a {
 	background: none;
 	outline: 0;
-	color: #E7746F;
+	color: #5fb4ec;
 }
 
 .navbar-custom .navbar-brand {
 	font-weight: 700;
 	font-size: 22px;
-    font-family: inherit;
+    font-family: Playfair Display;
 }
 
 .navbar-custom .dropdown-menu {
