banner page added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,11 @@ a:hover {
 .fa {
 	color: #4a4a4a;
 }
+
+.grid-item { width: 200px; }
+.grid-item--width2 { width: 400px; }
+
+
 /* ---------------------------------------------- /*
  * Transition elsements
 /* ---------------------------------------------- */
