--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -65,7 +65,9 @@ body {
 
 .overlay .title {
     text-align: center;
-    font-size: 30px;
+    font-size: 24px;
+    color: #ffffff;
+    padding-top: 15px;
 }
 
 .overlay .description {
