--- a/assets/css/templates/works.scss
+++ b/assets/css/templates/works.scss
@@ -43,6 +43,20 @@ body {
 	position: absolute;
 	margin-top: -50px;
 }
+.dl-btn {
+  a {
+    border: 1px solid black;
+    border-radius: 2px;
+    padding: 15px;
+  }
+  a:hover {
+    background-color: black;
+    color: #ffffff;
+    transition: all ease .4s;
+  }
+  text-align: left;
+  padding: 20px 60px 40px 60px;
+}
 .works-nav .navbar-brand, .navbar-custom .navbar-nav > li > a, .works-nav .navbar-nav .dropdown-menu > li > a {
     font-size: 11px;
     letter-spacing: 3px;
@@ -179,7 +193,7 @@ a:hover {
 }
 .role {
   text-align: left;
-  padding: 0px 60px 40px;
+  padding: 0px 60px 20px;
   margin-bottom: 0px;
 }
 
