--- a/assets/css/sass.css
+++ b/assets/css/sass.css
@@ -1398,6 +1398,9 @@ a:hover {
   right: 50px;
   top: 50px; }
 
+.mock-layout {
+  padding-bottom: 60px; }
+
 .work-section {
   background-color: #ffffff;
   margin: 100px 0px 100px 0px; }
