--- a/assets/css/templates/works.scss
+++ b/assets/css/templates/works.scss
@@ -173,7 +173,9 @@ a:hover {
   padding-left: 52px;
   right: 50px;
   top: 50px; }
-
+.mock-layout {
+  padding-bottom: 60px;
+}
 .work-section {
   background-color: #ffffff;
   margin: 100px 0px 100px 0px;
