--- a/assets/css/sass.css
+++ b/assets/css/sass.css
@@ -1363,7 +1363,7 @@ a:hover {
   transform: scale(1.1); }
 
 /* MODAL */
-.work-nadbc-overlay, .work-asbmt-overlay, .work-ros-overlay, .work-vit-overlay, .work-pulse-overlay {
+.work-nadbc-overlay, .work-asbmt-overlay, .work-ros-overlay, .work-vit-overlay, .work-pulse-overlay, .work-walarm-overlay {
   display: none;
   position: fixed;
   height: 100%;
@@ -1376,7 +1376,7 @@ a:hover {
   z-index: 10000000;
   text-align: center; }
 
-.modal-on-nadbc, .modal-on-asbmt, .modal-on-ros, .modal-on-vit, .modal-on-pulse {
+.modal-on-nadbc, .modal-on-asbmt, .modal-on-ros, .modal-on-vit, .modal-on-pulse, .modal-on-walarm {
   overflow: hidden;
   position: fixed;
   width: 100%;
