--- a/assets/css/sass.css
+++ b/assets/css/sass.css
@@ -1363,7 +1363,20 @@ a:hover {
   transform: scale(1.1); }
 
 /* MODAL */
-.work-nadbc-overlay, .work-asbmt-overlay, .work-ros-overlay, .work-vit-overlay, .work-pulse-overlay, .work-walarm-overlay, .work-htmle-overlay {
+.work-nadbc-overlay, .work-asbmt-overlay, .work-ros-overlay, .work-vit-overlay {
+  display: none;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  overflow-y: scroll;
+  overflow-x: hidden;
+  top: 0;
+  left: 0;
+  z-index: 10000000;
+  text-align: center; }
+
+.work-pulse-overlay, .work-walarm-overlay, .work-htmle-overlay {
   display: none;
   position: fixed;
   height: 100%;
