--- a/assets/css/templates/works.scss
+++ b/assets/css/templates/works.scss
@@ -244,6 +244,12 @@ a:hover {
   }
 }
 
+@media (max-width: 500px) {
+  .about-main, .skills, .other {
+    font-size: 22px;
+  }
+}
+
 @media (max-width: 450px) {
 	.page-title {
 		font-size: 30px;
