--- a/assets/css/sass.css
+++ b/assets/css/sass.css
@@ -1464,7 +1464,11 @@ a:hover {
     font-size: 28px; } }
 @media (max-width: 500px) {
   .about-main, .skills, .other {
-    font-size: 22px; } }
+    font-size: 22px; }
+
+  .company, .work-desc, .role, .dl-btn {
+    padding-right: 20px;
+    padding-left: 20px; } }
 @media (max-width: 450px) {
   .page-title {
     font-size: 30px; }
