--- a/assets/css/templates/works.scss
+++ b/assets/css/templates/works.scss
@@ -248,6 +248,10 @@ a:hover {
   .about-main, .skills, .other {
     font-size: 22px;
   }
+  .company, .work-desc, .role, .dl-btn {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
 }
 
 @media (max-width: 450px) {
