--- a/assets/css/templates/works.scss
+++ b/assets/css/templates/works.scss
@@ -242,6 +242,9 @@ a:hover {
     padding: 40px;
     font-size: 28px;
   }
+  .page-title {
+    margin-bottom: 30px !important;
+  }
 }
 
 @media (max-width: 500px) {
