--- a/assets/css/templates/works.scss
+++ b/assets/css/templates/works.scss
@@ -74,7 +74,7 @@ body {
     margin-bottom: 30px;
 }
 .work-title {
-  h2, h4 {
+  h2, ,h3, h4 {
     display: inline-table;
     vertical-align:middle;
     line-height:100%;  
