--- a/assets/css/sass.css
+++ b/assets/css/sass.css
@@ -4,6 +4,8 @@
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,100,300);
 @import url(https://fonts.googleapis.com/css?family=Abel);
+@import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Karla|Pavanam&display=swap");
 html {
   overflow-y: scroll; }
 
@@ -243,30 +245,30 @@ a,
  * Typography
 /* ---------------------------------------------- */
 h1, h2, h3, h4, h5, h6 {
-  font: 34px/1.2 Abel, sans-serif;
+  font: 34px/1.4 quicksand, sans-serif;
   letter-spacing: 5px;
   margin: 5px 0 5px;
-  color: #222; }
+  color: #39393b; }
 
 h1 {
-  font-weight: 700; }
+  font-weight: 200; }
 
 h2 {
-  font-weight: 700;
+  font-weight: 200;
   font-size: 30px;
   margin: 0 0 30px; }
 
 h3 {
-  font-weight: 700;
+  font-weight: 200;
   font-size: 22px;
   letter-spacing: 1px;
   margin: 0 0 5px; }
 
 .about-h3 {
-  font-weight: 400; }
+  font-weight: 200; }
 
 h4 {
-  font-weight: 400;
+  font-weight: 200;
   font-size: 18px;
   letter-spacing: 1px; }
 
@@ -1364,7 +1366,7 @@ body {
   transition: opacity 0.6s;
   vertical-align: middle;
   line-height: 270px; }
-  .work-title h2, .work-title h4 {
+  .work-title h2, .work-title h3, .work-title h4 {
     display: inline-table;
     vertical-align: middle;
     line-height: 100%; }
