--- a/assets/css/templates/style.scss
+++ b/assets/css/templates/style.scss
@@ -3,6 +3,9 @@
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,100,300);
 @import url(https://fonts.googleapis.com/css?family=Abel);
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Karla|Pavanam&display=swap');
+
 /*!
  * My Portfolio v1.0.0
  * Homepage: http://scripteden.com
@@ -173,31 +176,31 @@ a,
 /* ---------------------------------------------- */
 
 h1, h2, h3, h4, h5, h6 {
-	font: 34px/1.2 Abel, sans-serif;
+	font: 34px/1.4 quicksand, sans-serif;
 	letter-spacing: 5px;
 	margin: 5px 0 5px;
-	color: #222;
+	color: #39393b;
 }
 h1 {
-	font-weight: 700;
+	font-weight: 200;
 }
 h2 {
-	font-weight: 700;
+	font-weight: 200;
 	font-size: 30px;
 	margin: 0 0 30px;
 }
 
 h3 {
-	font-weight: 700;
+	font-weight: 200;
 	font-size: 22px;
 	letter-spacing: 1px;
 	margin: 0 0 5px;
 }
 .about-h3 {
-	font-weight: 400;
+	font-weight: 200;
 }
 h4 {
-	font-weight: 400;
+	font-weight: 200;
 	font-size: 18px;
 	letter-spacing: 1px;
 }
