--- a/assets/css/sass.css
+++ b/assets/css/sass.css
@@ -821,7 +821,7 @@ textarea.form-control {
 .navbar-custom .navbar-nav .dropdown-menu > li > a {
   font-size: 11px;
   letter-spacing: 3px;
-  color: #000000; }
+  color: #ffffff; }
 
 .navbar-custom .nav li.active,
 .navbar-custom .nav li a:hover,
