--- a/assets/css/css_raw/style.css
+++ b/assets/css/css_raw/style.css
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,500,700,800);
-@import url(http://fonts.googleapis.com/css?family=Lobster);
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap')
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,100,300);
 @import url(https://fonts.googleapis.com/css?family=Abel);
@@ -171,39 +171,43 @@ a,
 /* ---------------------------------------------- */
 
 h1, h2, h3, h4, h5, h6 {
-	font: 700 40px/1.2 Abel, sans-serif;
+	font: 700 40px/1.2 Lato, sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	margin: 5px 0 5px;
 	color: #222;
+	font-weight: bold;
 }
 
 h2 {
 	font-size: 30px;
 	margin: 0 0 30px;
+	font-weight: bold;
 }
 
 h3 {
 	font-size: 13px;
 	letter-spacing: 1px;
 	margin: 0 0 5px;
+	font-weight: bold;
 }
 
 h4 {
 	font-size: 12px;
 	letter-spacing: 1px;
+	font-weight: bold;
 }
 
 h5 {
 	font-size: 12px;
 	letter-spacing: 1px;
-	font-weight: 400;
+	font-weight: bold;
 }
 
 h6 {
 	font-size: 11px;
 	letter-spacing: 1px;
-	font-weight: 400;
+	font-weight: bold;
 }
 
 /* ---------------------------------------------- /*
