--- a/assets/css/sass.css
+++ b/assets/css/sass.css
@@ -11,7 +11,7 @@ html {
   overflow-y: scroll; }
 
 body {
-  font-family: sans-serif;
+  font-family: Lato;
   margin: 0;
   padding: 0; }
 
@@ -312,18 +312,20 @@ h1, h2, h3, h4, h5, h6 {
   font: 34px/1.4 Raleway, sans-serif;
   letter-spacing: 1px;
   margin: 5px 0 5px;
-  color: #000000; }
+  color: #000000; 
+font-weight: bold;}
+
 
 h1 {
-  font-weight: 200; }
+  font-weight: bold; }
 
 h2 {
-  font-weight: 200;
+  font-weight: bold;
   font-size: 30px;
   margin: 0 0 30px; }
 
 h3 {
-  font-weight: 200;
+  font-weight: bold;
   font-size: 22px;
   letter-spacing: 1px;
   margin: 0 0 5px; }
@@ -332,7 +334,7 @@ h3 {
   font-weight: 200; }
 
 h4 {
-  font-weight: 200;
+  font-weight: bold;
   font-size: 18px;
   letter-spacing: 1px; }
 
